# caiven

./: .dockerignore  CREATOR_RIGHTS.md  Cargo.toml  LICENSE  README.md  TRADEMARKS.md
.github/workflows/: rust.yml
crates/caiven-cart/: Cargo.toml
crates/caiven-core/: Cargo.toml
crates/caiven-machine/: Cargo.toml
crates/caiven-machine/src/: app.rs
crates/caiven-port/: Cargo.toml  Dockerfile  docker-compose.yml
crates/caiven-port/src/: auth.rs  db.rs  lib.rs  main.rs  models.rs
crates/caiven-port/src/entities/: cart_versions.rs  carts.rs  mod.rs  prelude.rs  ratings.rs  users.rs
crates/caiven-port/src/handlers/: auth.rs  carts.rs  discovery.rs  legacy.rs  social.rs  spa.rs  versions.rs
crates/caiven-port/tests/: api.rs
crates/caiven-port/web/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
crates/caiven-port/web/public/: caiven-audio-worklet.js
crates/caiven-port/web/public/wasm/: caiven_web.js  caiven_web.wasm
crates/caiven-port/web/src/: App.svelte  api.ts  app.css  player.ts  router.svelte.ts
crates/caiven-port/web/src/components/: CartCard.svelte  CommentList.svelte  Footer.svelte  Navbar.svelte  Pagination.svelte  RatingStars.svelte  ScreenshotImg.svelte  TagChips.svelte
crates/caiven-port/web/src/lib/components/: Logo.svelte
crates/caiven-port/web/src/pages/: Author.svelte  Browse.svelte  CartDetail.svelte  Home.svelte  Login.svelte  Play.svelte  Profile.svelte  Register.svelte  Upload.svelte
crates/caiven-studio/: Cargo.toml
crates/caiven-studio/src/: app.rs  debugger.rs  main.rs  port_client.rs
crates/caiven-studio/src/app/: cart_io.rs  cli.rs
crates/caiven-studio/src/studio/: app.rs  browser_panel.rs  cart.rs  code_panel.rs  command_palette.rs  debug_panel.rs  export.rs  game_panel.rs  help_panel.rs  intellisense.rs  map_panel.rs  menu_bar.rs  meta_panel.rs  mod.rs  music_panel.rs  palette_panel.rs  recent.rs  sfx_panel.rs  sheet.rs  sprite_panel.rs  templates.rs  theme.rs  toolbar.rs  welcome_panel.rs
crates/caiven-vm/: Cargo.toml
crates/caiven-vm/src/: lib.rs  peripheral.rs  runtime.rs  settings.rs
crates/caiven-vm/src/input/: keymap.rs  mod.rs
crates/caiven-vm/src/rendering/: font.rs  screen.rs  text.rs
crates/caiven-vm/src/vm/: api_registry.rs  audio.rs  camera.rs  config.rs  fault.rs  lua_exec.rs  mod.rs  palette.rs  prelude.lua  rtc.rs  sfx.rs
crates/caiven-vm/tests/: lua_script.rs
crates/caiven-web/: Cargo.toml  build-web.sh  smoke_test.mjs  test.html
crates/caiven-web/src/: main.rs
crates/fc-asm/: Cargo.toml
crates/fc-core/: Cargo.toml
crates/fc-engine/: Cargo.toml
crates/fc-engine/src/: app.rs  cart_save.rs  debugger.rs  hot_reload.rs  hub_client.rs  main.rs  tabs.rs
crates/fc-engine/src/app/: cli.rs  input_router.rs  rom_io.rs  run_loop.rs
crates/fc-engine/src/editors/: browser.rs  code.rs  map.rs  meta.rs  mod.rs  music.rs  palette.rs  sfx.rs  sprite.rs  util.rs
crates/fc-engine/src/studio/: app.rs  browser_panel.rs  cart.rs  code_panel.rs  debug_panel.rs  game_panel.rs  map_panel.rs  meta_panel.rs  mod.rs  music_panel.rs  palette_panel.rs  sfx_panel.rs  sheet.rs  sprite_panel.rs  theme.rs  toolbar.rs
crates/fc-host/: Cargo.toml
crates/fc-host/src/: app.rs  debugger.rs  main.rs  peripheral.rs  settings.rs  tests.rs  timing.rs
crates/fc-host/src/assembler/: assembler.rs  item.rs  mod.rs
crates/fc-host/src/assembler/directives/: default_set.rs  directive.rs  directive_set.rs  mod.rs
crates/fc-host/src/assembler/instructions/: instruction_set.rs
crates/fc-host/src/assembler/instructions/operations/: arithmetic.rs  audio.rs  camera.rs  debug.rs
crates/fc-host/src/input/: button.rs  input.rs  keymap.rs  mod.rs
crates/fc-host/src/isa/: default_set.rs  instruction_set.rs
crates/fc-host/src/isa/operations/: arithmetic.rs  audio.rs  control_flow.rs  debug.rs  memory.rs  screen.rs
crates/fc-host/src/rendering/: font.rs  mod.rs  screen.rs  text.rs
crates/fc-host/src/vm/: audio.rs  camera.rs  config.rs  context.rs  cpu.rs  fault.rs  memory.rs  mod.rs  palette.rs
crates/fc-hub/: Cargo.toml  Dockerfile  docker-compose.yml
crates/fc-hub/src/: auth.rs  db.rs  error.rs  gallery.rs  handlers.rs  lib.rs  main.rs  models.rs
crates/fc-hub/src/entities/: api_tokens.rs  cart_versions.rs  carts.rs  comments.rs  mod.rs  prelude.rs  sessions.rs
crates/fc-hub/src/handlers/: auth.rs  carts.rs  discovery.rs  legacy.rs  mod.rs  social.rs  spa.rs  versions.rs
crates/fc-hub/tests/: api.rs
crates/fc-hub/web/: index.html  package-lock.json  vite.config.ts
crates/fc-hub/web/src/: App.svelte  api.ts  app.css  router.svelte.ts  stores.svelte.ts
crates/fc-hub/web/src/components/: Navbar.svelte  Pagination.svelte  RatingStars.svelte  TagChips.svelte
crates/fc-hub/web/src/pages/: Author.svelte  CartDetail.svelte  Home.svelte  Login.svelte  Profile.svelte  Upload.svelte
crates/fc-lang/: Cargo.toml
crates/fc-rom/: Cargo.toml
crates/fc-vm/: Cargo.toml
crates/fc-vm/src/: lib.rs  runtime.rs  settings.rs
crates/fc-vm/src/input/: input.rs
crates/fc-vm/src/isa/: default_set.rs  instruction_set.rs  mod.rs
crates/fc-vm/src/isa/operations/: arithmetic.rs  audio.rs  camera.rs  control_flow.rs  debug.rs  input.rs  map.rs  memory.rs  mod.rs  screen.rs  shapes.rs  table.rs
crates/fc-vm/src/rendering/: font.rs  screen.rs  text.rs
crates/fc-vm/src/vm/: config.rs  context.rs  cpu.rs  debug.rs  execution.rs  fault.rs  lua_exec.rs  mod.rs  palette.rs  sfx.rs
crates/fc-vm/tests/: asm_demos.rs  fc_lang_arrays.rs  fc_lang_closures.rs  fc_lang_forin.rs  fc_lang_heap_bounds.rs  fc_lang_hof.rs  fc_lang_multireturn.rs  fc_lang_strings.rs  fc_lang_varargs.rs  lua_script.rs  opcodes.rs
crates/migration/: Cargo.toml
docs/: brand-colors.md
games/: sprite.asm  tiles.asm
games/asm/: audio_test.asm  catch.asm  movement.asm  sprite.asm  tiles.asm
games/carts/: audio_test.cav  catch.cav  (+7 more)
src/: app.rs  assember.rs  assembler.rs  cartridge.rs  carts.rs  debugger.rs  input.rs  instruction.rs  instruction_set.rs  main.rs  roms.rs  screen.rs  settings.rs  utils.rs  vm.rs
(+128 files in other folders)
