[workspace]
members = ["crates/fc-core", "crates/fc-rom", "crates/fc-asm", "crates/fc-host", "crates/fc-vm", "crates/fc-engine", "crates/fc-lang", "crates/fc-hub", "crates/migration"]
resolver = "2"

[workspace.lints.clippy]
unwrap_used = "warn"

[workspace.dependencies]
anyhow = "1"
argon2 = "0.5"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
cpal = "0.17.1"
crc32fast = "1"
eframe = "0.32"
egui = "0.32"
egui_extras = "0.32"
env_logger = "0.11"
fc-asm = { path = "crates/fc-asm" }
fc-lang = { path = "crates/fc-lang" }
fc-core = { path = "crates/fc-core" }
fc-rom = { path = "crates/fc-rom" }
fc-vm = { path = "crates/fc-vm" }
image = "0.25"
log = "0.4"
mlua = { version = "0.10", features = ["lua54", "vendored"] }
pixels = "0.15"
rocket = { version = "0.5", features = ["json"] }
sea-orm = { version = "1", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = { version = "1", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
migration = { path = "crates/migration" }
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
tempfile = "3"
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
ureq = "2"
uuid = { version = "1", features = ["v4"] }
winit = "0.30"
