[package]
name = "caiven-machine"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "caiven-machine"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
caiven-core = { workspace = true }
caiven-cart = { workspace = true }
caiven-vm = { workspace = true }
log = { workspace = true }
winit = { workspace = true }
