[package]
name = "caiven-studio"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "caiven-studio"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
eframe = { workspace = true }
egui = { workspace = true }
egui_extras = { workspace = true }
env_logger = { workspace = true }
caiven-core = { workspace = true }
caiven-cart = { workspace = true }
caiven-vm = { workspace = true }
image = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
ureq = { workspace = true }
winit = { workspace = true }
