[package]
name = "caiven-vm"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[lib]
name = "caiven_vm"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
cpal = { workspace = true }
caiven-cart = { workspace = true }
caiven-core = { workspace = true }
image = { workspace = true }
log = { workspace = true }
mlua = { workspace = true }
pixels = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
winit = { workspace = true }
