[package]
name = "caiven-vm"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[lib]
name = "caiven_vm"
path = "src/lib.rs"

[features]
default = ["native"]
native = ["dep:winit", "dep:pixels", "dep:cpal"]

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
cpal = { workspace = true, optional = true }
caiven-cart = { workspace = true }
caiven-core = { workspace = true }
image = { workspace = true }
log = { workspace = true }
mlua = { workspace = true }
pixels = { workspace = true, optional = true }
serde = { workspace = true }
toml = { workspace = true }
winit = { workspace = true, optional = true }
