[package]
name = "fc-engine"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "fc-engine"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
fc-asm = { workspace = true }
fc-lang = { workspace = true }
fc-core = { workspace = true }
fc-rom = { workspace = true }
fc-vm = { workspace = true }
image = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
ureq = { workspace = true }
winit = { workspace = true }
