[package]
name = "fc-hub"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[[bin]]
name = "fc-hub"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
rocket = { workspace = true }
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }
migration = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
