[package]
name = "fc-vm"
version = "0.1.0"
edition = "2024"

[lib]
name = "fc_vm"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
cpal = { workspace = true }
fc-asm = { workspace = true }
fc-core = { workspace = true }
image = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
winit = { workspace = true }
